syntax = "proto3";

package ci.proto.common.info;

option java_package = "ru.yandex.ci.common.info";


message InfoPanel {
    repeated InfoEntity entities = 1;
}

message InfoEntity {
    string key = 1;
    string value = 2;
    string link = 3;
    bool has_copy_button = 10;
    bool internal = 11; //Only for developers
}
